# react-native-track-player

./: .jscpd.json  404.html  index.html  knip.json  lefthook.yml  opensearch.xml  package.json  search.html  sitemap.xml
.claude/: package-lock.json  package.json  settings.json
.claude/scripts/: guard-protected-files.ts  post-edit-checks.ts
android/: build.gradle  detekt.yml
android/src/main/cpp/: CMakeLists.txt  JsiBindings.cpp  JsiUtils.cpp  JsiUtils.h
assets/js/: 00bde185.bda36121.js  0341dc9d.3fd57edf.js  043bfdb8.049cb963.js  04597326.0c7ffc7b.js  055aceb0.9cdb021d.js  05dd9f1b.60e14363.js  0685996c.e6dffc1f.js  07004238.982b7aaf.js  070bc404.22fe3c43.js  0714762b.c27342e1.js  074bc8bd.5bc28db7.js  09d72823.be69ff3c.js  0bc03210.1d1f27e5.js  0e384e19.949a3b28.js  0e924499.083cf852.js  0f361a98.fa199496.js  0f61d384.1af0fbe3.js  10276b08.a46f1f23.js  120b0a90.7cc9fe35.js  12770ebd.bb72df6b.js  1291c0ae.ad0a831a.js  135272dc.050917be.js  13fa0dd9.ef80ba10.js  167ceed1.771958a4.js  167f1ed3.ab7dee86.js  16fe2a79.e76dcfdb.js  1925e818.bae0b548.js  1977677a.7b59c0d0.js  19e38dee.59401faa.js  1b443631.d7712607.js  1bf8893b.6c2fe3af.js  1c0ad8e6.22dd6c23.js  1c31a03e.dc1c5901.js  1c62a355.24a18a17.js  1c6e47e8.43ca5d59.js  1c7dd417.a4bb6a2e.js  1c9ef7dd.713c4de9.js  1cad3c18.da0ddd36.js  1cb0395a.3ffebd96.js  1d3e5a90.0139d26d.js  (+189 more)
docs/: intro.html  troubleshooting.html  v2-migration.html  v3-migration.html  v3.1.0-migration.html  v4-migration.html
example/: README.md  package.json
ios/: .swiftlint.yml  TrackPlayer.swift
src/: trackPlayer.ts
(+225 files in other folders)
